# multi-agent-development

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  OPTIMIZATION_PLAN.md  PRODUCT.md  README.md  VISUALIZATION_PLAN.md  docker-compose.yml  inspect_graph_structure.py  mcp.json  pyproject.toml  start_dashboard.sh  verify_graph_definition.py
.claude/: user-preferences.md
.claude/commands/: add-lesson.md  api-contracts-and-validation.md  call-cursor.md  call-gemini.md  codebase-visualizer.md  dependency-update.md  deploy.md  discover.md  e2e-webapp-testing.md  frontend-dev-guidelines.md  git-commit-conventional.md  git-committer-atomic.md  git-workflow-helper.md  github-actions-debugging.md  implement-task.md  list-projects.md  orchestrate.md  phase-status.md  plan-feature.md  plan.md  pr-create.md  refactor-safe-workflow.md  release-notes-and-changelog.md  resolve-conflict.md  skill-creator.md  skill-eval.md  skills.md  status.md  sync-projects.md  sync-rules.md  task.md  tdd-overnight-dev.md  test-writer-unit-integration.md  ts-strict-guardian.md  ui-design-system.md  validate-plan.md  verify-code.md  workflow-manager.md
.cursor/: rules
.cursor/rules/: 00-general.mdc
.github/workflows/: test.yml
.workflow/: context_index.md
.workflow/errors/: crash_report.jsonl
agents/A01-planner/: CLAUDE.md  PROMPT.md  TOOLS.json
agents/A02-architect/: GEMINI.md  PROMPT.md  TOOLS.json
agents/A03-test-writer/: CLAUDE.md  PROMPT.md  TOOLS.json
agents/A04-implementer/: CLAUDE.md  PROMPT.md  TOOLS.json
agents/A05-bug-fixer/: CURSOR-RULES.md  PROMPT.md  TOOLS.json
agents/A06-refactorer/: GEMINI.md  PROMPT.md  TOOLS.json
agents/A07-security-reviewer/: CURSOR-RULES.md  PROMPT.md  TOOLS.json
agents/A08-code-reviewer/: GEMINI.md  PROMPT.md  TOOLS.json
agents/A09-documentation/: CLAUDE.md  PROMPT.md  TOOLS.json
agents/A10-integration-tester/: CLAUDE.md  PROMPT.md  TOOLS.json
agents/A11-devops/: CURSOR-RULES.md  PROMPT.md  TOOLS.json
agents/A12-ui-designer/: CLAUDE.md  PROMPT.md  TOOLS.json
agents/A13-quality-gate/: CLAUDE.md  CURSOR-RULES.md  PROMPT.md  TOOLS.json
agents/A14-dependency-checker/: CLAUDE.md  PROMPT.md  TOOLS.json
agents/_templates/: base-agent.md.template  planner-agent.md.template  reviewer-agent.md.template  writer-agent.md.template
collection/: README.md
cursor-agentic-playbook/: README.md  global-rules-for-ai.md  hooks.json  perplexity-mcp.md
cursor-agentic-playbook/commands/: discover.md  implement-task.md  orchestrate.md  plan.md  resolve-conflict.md  ui-test.md  validate-plan.md  verify-code.md
cursor-agentic-playbook/hooks/: audit-log.py  format-after-edit.py  guard-shell.py  precommit-checks.py
cursor-agentic-playbook/smoke-project/: README.md
cursor-agentic-playbook/subagents/: backend-specialist.md  devops-specialist.md  frontend-specialist.md  implementer.md  orchestrator.md  planner.md  test-writer.md  ui-tester.md  validator-architecture.md  validator-security.md  verifier.md
cursor-agentic-playbook/workflow/: discover.md  (+6 more)
dashboard/backend/: =0.3.0  pyproject.toml  requirements.txt
dashboard/backend/app/: callbacks.py  config.py  deps.py  main.py
dashboard/backend/app/models/: __init__.py  schemas.py
dashboard/backend/app/routers/: __init__.py  agents.py  budget.py  chat.py  collection.py  projects.py  tasks.py  workflow.py
dashboard/backend/app/services/: __init__.py  chat_service.py  db_service.py  event_bridge.py  event_service.py  project_service.py  workflow_service.py
dashboard/backend/app/websocket/: manager.py
dashboard/backend/tests/: test_api_workflow.py  test_chat.py  test_collection.py  test_deps.py  test_guardrails_service.py
docs/: CONDUCTOR-GUIDE.md  META-ARCHITECT-GUIDE.md  README.md  ROUTER-REFERENCE.md  SPECIALIST-AGENTS-DESIGN.md  TASK-LIFECYCLE.md  quick-start.md  readme.md
mcp_servers/: __init__.py  client.py
orchestrator/: __init__.py  context_injector.py  models.py  orchestrator.py  project_manager.py  status.py
orchestrator-api/: Dockerfile  __init__.py  main.py  requirements.txt
report/: A02-architect_pre_mortem_analysis.md  A02-architect_system_analysis_review.md  claude-opus-critical-fixes.md  claude-opus-premortem.md  claude-opus-review.md  part-18-review.md  pre-mortem-analysis.md
schemas/: agent-tools-schema.json  agent_message.json  dependency_checker_output.json  implementer_output.json  integration_tester_output.json  planner_output.json  project-config-schema.json  quality_gate_output.json  reviewer_output.json  skill-schema.json  tasks-schema.json  test_writer_output.json
scripts/: bootstrap_prompts.py  call-cursor.sh  call-gemini.sh  compile-agent-prompts.py  db-cli.py  init.sh  migrate_workflow_to_db.py  safe_start.sh  setup-project.sh  setup_wizard.py  start-dashboard.sh  start_all.sh  start_watchdog.py  sync-project-templates.py  sync-rules.py  validate_agent_tools.py  validate_skills.py
shared-rules/: README.md  cli-examples.md  cli-reference.md  coding-standards.md  core-rules.md  guardrails.md  lessons-archived.md  lessons-learned.md
templates/: PRODUCT-enhanced.md.template
tests/: conftest.py  test_action_log.py  test_agent_adapters.py  test_agent_registry.py  test_agents.py  test_approval.py  test_approval_gate.py  test_audit_trail.py  test_auto_improvement_integration.py  test_boundaries.py  test_budget.py  test_caching.py  test_checkpoint.py  test_claude_agent_enhanced.py  test_cleanup_recovery.py  test_conflict_resolution.py  test_context.py  test_context_injector.py  test_cost_optimization.py  test_deployment.py  test_discuss_research_phases.py  test_documentation_discovery.py  test_error_aggregator.py  test_error_context.py  test_evaluator.py  test_fixer_agent.py  test_fixer_circuit_breaker.py  test_fixer_diagnosis.py  test_fixer_integration.py  test_fixer_strategies.py  test_fixer_triage.py  test_global_error_routing.py  test_global_evaluation.py  test_handoff.py  test_implementation_node.py  test_integration.py  test_langgraph.py  test_linear_integration.py  test_log_manager.py  test_markdown_tracker.py  (+31 more)
(+575 files in other folders)
