[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor"
dynamic = ["version"]
description = "Conductor: Multi-Agent Orchestration System for coordinating AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Conductor", email = "conductor@example.com"}
]
keywords = [
    "ai",
    "agents",
    "orchestration",
    "claude",
    "cursor",
    "gemini",
    "coding",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # SDKs for direct API calls
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    # Async support
    "aiohttp>=3.9.0",
    "aiofiles>=24.1.0",
    # HTTP/WebSocket clients
    "websockets>=13.0.0",
    "requests>=2.31.0",
    # LangGraph for workflow orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    # Validation and data models
    "pydantic>=2.0.0",
    # MCP for semantic context
    "mcp>=1.0.0",
    # Utilities
    "tenacity>=9.0.0",
    # Terminal UI
    "rich>=13.0.0",
    # Environment management
    "python-dotenv>=1.0.0",
    # SurrealDB for persistent state (optional but recommended)
    "surrealdb>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "aiohttp>=3.9.0",  # For async webhook delivery
]
all = [
    "conductor[dev,observability]",
]

[project.scripts]
orchestrator = "orchestrator.orchestrator:main"

# [project.urls]
# URLs removed - update with actual repository when published

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
timeout_method = "signal"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Fast unit tests with mocked dependencies",
    "integration: Tests requiring external services",
    "db_integration: Tests requiring real SurrealDB",
    "slow: Tests taking >5 seconds",
    "subprocess: Tests that spawn subprocesses",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["orchestrator"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.coverage.run]
source = ["orchestrator"]
branch = true
parallel = true
omit = [
    "tests/*",
    "orchestrator/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class.*Protocol.*:",
]
